[tool.poetry]
name = "parallel-decoding"
version = "0.1.0"
description = ""
authors = ["Will Seltzer <1661264+willseltzer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "parallel_decoding"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
pandas = "^2.0.3"
tiktoken = "^0.4.0"
openai = "^0.27.8"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
